--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -55,7 +55,7 @@ description: The pain revolution is here. Whether you're a health professional, 
         </section>
       </section>
     </div>
-    <div class="[ stack ] [ g3 ]">
+    <div class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Other Projects</h2>
       <section class="[ flow1/3 ]">
         <h3>Journal Club</h3>
