--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -53,7 +53,7 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
         </section>
       </section>
     </div>
-    <div class="[ stack ] [ g3 ]">
+    <div class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Otros Projectos</h2>
       <section class="[ flow1/3 ]">
         <h3>Club de Investigación </h3>
