--- a/src/content/es/club.html
+++ b/src/content/es/club.html
@@ -10,18 +10,38 @@ description:
 {% include 'partials/header.html' %}
 <main>
   <div class="[ squeeze12 stack ] [ g3 centerx ]">
-    <div class="[ flow1/2 ]">
+    <div class="[ flow1 ]">
       <h1>Club de Investigación</h1>
       <p class="[ fs2 ]"><em>USP CEU Facultad de Medicina</em></p>
+      <p>Inscríbete aquí: <a href="https://forms.office.com/e/w9e4uwSR02" target="_blank">https://forms.office.com/e/w9e4uwSR02</a></p>
     </div>
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Horario</h2>
-      <ul class="[ flow3/2 ]">
+      <ul class="[ flow2 ]">
         {% for event in club_schedule %}
         {% if event.lang == 'es' and not event.archived %}
-        <li class="[ flow1/2 ]">
-          <h3>{{ event.date }}</h3>
-          <p>{{ event.topic }}</p>
+        <li class="[ flow1 ]">
+          <h3>{{ event.topic }}</h3>
+          <p>{{ event.date }}{% if event.room %} | {{ event.time }} | {{ event.room }}{% endif %}</p>
+          {% for paper in event.papers %}
+          <p></p>
+          {% endfor %}
+          {% if event.prompts %}
+          <h4>Preguntas</h4>
+          <ul class="[ flow1/2 ]">
+          {% for prompt in event.prompts %}
+          <li class="[ fs-1 ]"><em>{{ prompt }}</em></li>
+          {% endfor %}
+          </ul>
+          {% endif %}
+          {% if event.papers %}
+          <h4>Artículos</h4>
+          <ul class="[ flow1/2 ]">
+          {% for paper in event.papers %}
+          <li class="[ fs-1 ]"><a href="{{ paper.url }}" target="_blank">{{ paper.title }}</a></li>
+          {% endfor %}
+          </ul>
+          {% endif %}
         </li>
         {% endif %}
         {% endfor %}
@@ -49,7 +69,7 @@ description:
           <p>Aunque no es obligatorio que traigas nada, te animamos a que lo hagas.</p>
         </li>
       </ul>
-      <p>¿Tienes más preguntas o no sabes acceder a la ciencia? Escríbeme a <a href="mailto:frederik.kehlet@usp.ceu.es">frederik.kehlet@usp.ceu.es</a></p>
+      <p><strong>¿Tienes más preguntas o no sabes acceder a la ciencia? Escríbeme a <a href="mailto:frederik.kehlet@usp.ceu.es">frederik.kehlet@usp.ceu.es</a></strong></p>
       <p>Gracias a Zeph Scamps y Pierre Serrot por ser los coorganizadores.</p>
     </section>
   </div>
