Update Spanish club info

--- a/src/content/es/club.html
+++ b/src/content/es/club.html
@@ -66,11 +66,11 @@ description:
         </li>
         <li class="[ flow1 ]">
           <h3>¿Tengo que traer algo?</h3>
-          <p>Aunque no es obligatorio que traigas nada, te animamos a que lo hagas.</p>
+          <p>Aunque no es obligatorio que traigas nada, ¡te animo a que lo hagas si te sientes cómod@!</p>
         </li>
       </ul>
       <p><strong>¿Tienes más preguntas o no sabes acceder a la ciencia? Escríbeme a <a href="mailto:frederik.kehlet@usp.ceu.es">frederik.kehlet@usp.ceu.es</a></strong></p>
-      <p>Gracias a Zeph Scamps y Pierre Serrot por ser los coorganizadores.</p>
+      <p>Gracias a Zeph Scamps y Pierre Serrot por ser coorganizadores.</p>
     </section>
   </div>
 </main>
