--- a/src/content/en/club.html
+++ b/src/content/en/club.html
@@ -66,7 +66,7 @@ description:
         </li>
         <li class="[ flow1 ]">
           <h3>Do I have to bring anything?</h3>
-          <p>While you aren't required to bring anything, we highly encourage that you do!</p>
+          <p>While you aren't required to bring anything, we highly encourage that you do if you feel comfortable!</p>
         </li>
       </ul>
       <p><strong>Have any further questions, or not sure how to get access to the science? Send me a message at <a href="mailto:frederik.kehlet@usp.ceu.es">frederik.kehlet@usp.ceu.es</a></strong></p>
