--- a/src/content/es/club.html
+++ b/src/content/es/club.html
@@ -66,7 +66,7 @@ description:
         </li>
         <li class="[ flow1 ]">
           <h3>¿Tengo que traer algo?</h3>
-          <p>Aunque no es obligatorio que traigas nada, ¡te animo a que lo hagas si te sientes cómod@!</p>
+          <p>Aunque no es obligatorio que traigas nada, ¡te animamos a que lo hagas si te sientes cómod@!</p>
         </li>
       </ul>
       <p><strong>¿Tienes más preguntas o no sabes acceder a la ciencia? Escríbeme a <a href="mailto:frederik.kehlet@usp.ceu.es">frederik.kehlet@usp.ceu.es</a></strong></p>
