Update CSS framework, add CSAW project

--- a/src/content/en/club.html
+++ b/src/content/en/club.html
@@ -9,7 +9,7 @@ description:
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="[ squeeze12 stack ] [ g3 centerx ]">
+  <div class="[ squeeze12 stack ] [ g3 cx ]">
     <div class="[ flow1 ]">
       <h1>Journal Club</h1>
       <p class="[ fs2 ]"><em>USP CEU Faculty of Medicine</em></p>
@@ -17,7 +17,7 @@ description:
     </div>
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Schedule</h2>
-      <ul class="[ flow2 ]">
+      <!-- <ul class="[ flow2 ]">
         {% for event in club_schedule %}
         {% if event.lang == 'en' and not event.archived %}
         <li class="[ flow1 ]">
@@ -45,8 +45,8 @@ description:
         </li>
         {% endif %}
         {% endfor %}
-      </ul>
-      <p>For the Spanish schedule, <a href="/es/club/">visit the Spanish page</a></p>
+      </ul> -->
+      <p>Until further notice, all journal club sessions will take place in Spanish. Please <a href="/es/club/">refer to the Spanish page</a></p>
     </section>
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Info</h2>
