--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -11,17 +11,17 @@ description: The pain revolution is here. Whether you're a health professional, 
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="[ stack ] g4 centerx squeeze12">
-    <section class="[ stack ] g2 squeeze11">
+  <div class="[ squeeze12 stack ] [ cx g4 ]">
+    <section class="[ squeeze11 stack ] [ g2 ]">
       <h1>Welcome!</h1>
-      <div class="[ sidebar ] g2 itemsstart">
-        <div class="[ image ] [ frame1:1 squeeze6 side6 ]">
+      <div class="[ sidebar ] [ is g2 ]">
+        <div class="[ image ] [ frame1:1 side6 squeeze6 ]">
           <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
         </div>
         <div class="[ flow1 main67% squeeze9 ]">
-          <p>Hey there! I'm Frederik, a physiotherapy student at San Pablo University in Madrid, Spain. I love promoting health and helping people achieve their functional goals.</p>
+          <p>Hey there! I'm Frederik, a physical therapy student at San Pablo University in Madrid, Spain. I love promoting health and helping people achieve their functional goals.</p>
           <p>For a large number of people in society, there's a very personal, often unpleasant sensation and emotion which intrudes on many aspects of their life: <strong>pain.</strong></p>
-          <p>With a focus on pain as both a symptom and a condition in and of itself, my goal here is to develop a variety of free resources for clinicians, patients, and other curious people. I want to make it easy for everyone to make sense of this common yet misunderstood (and stigmatized) experience.</p>
+          <p>With a focus on pain as both a symptom and a condition in and of itself, my goal here is to develop a variety of free educational resources for clinicians, patients, and other curious people. I want to make it easy for everyone to make sense of this common yet misunderstood (and stigmatized) experience.</p>
         </div>
       </div>
     </section>
