--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -11,17 +11,17 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="stack g4 centerx squeeze12">
-    <section class="stack g2 squeeze11">
+  <div class="[ squeeze12 stack ] [ cx g4 ]">
+    <section class="[ squeeze11 stack ] [ g2 ]">
       <h1>¡Bienvenid@!</h1>
-      <div class="sidebar g2 itemsstart">
-        <div class="[ image ] [ frame1:1 squeeze6 side6 ]">
+      <div class="[ sidebar ] [ is g2 ]">
+        <div class="[ image ] [ frame1:1 side6 squeeze6 ]">
           <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
         </div>
         <div class="main67% squeeze9 flow1">
           <p>¡Hola! Me llamo Frederik y soy estudiante de fisioterapia en la Universidad San Pablo en Madrid, España. Me encanta promover la salud y ayudar a las personas a lograr sus objetivos funcionales.</p>
           <p> Para una gran cantidad de gente en la sociedad existe una sensación y emoción muy personal, a menudo desagradable, que se mete en muchos aspectos de su vida: <strong>el dolor.</strong></p>
-          <p>Con un enfoque en el dolor como un síntoma así como una condición en sí mismo, es mi objetivo aquí desarrollar una variedad de recursos gratuitos para clínicos, pacientes, y otras personas curiosas. Quiero facilitar la comprensión de esta experiencia tan común y a la vez tan malinterpretada y estigmatizada.</p>
+          <p>Con un enfoque en el dolor como un síntoma así como una condición en sí mismo, es mi objetivo aquí desarrollar una variedad de recursos educativos gratuitos para clínicos, pacientes, y otras personas curiosas. Quiero facilitar la comprensión de esta experiencia tan común y a la vez tan malinterpretada y estigmatizada.</p>
         </div>
       </div>
     </section>
