--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,13 +1,13 @@
 ---
-title: ...
+title: Welcome/bienvenid@
 permalink: /
 description: The pain revolution is here. Whether you're a health professional, a person with pain, or just curious, BEVAE makes it easy to learn about the nature of pain and modern pain management principles.
 ---
 {% extends "base.html" %}
 {% block body %}
-<main class="[ cover stack g3 jfycenter itemscenter ] [ p3 ]">
-  <div class="stack g0 itemsstart">
-    <div class="flow1/3">
+<main class="[ cover stack g3 ] [ jc ic p3 ]">
+  <div class="[ stack ] [ g0 ]">
+    <div class="[ flow1/3 ]">
       <p>Choose a language</p>
       <p>Elige un idioma</p>
     </div>
