--- a/src/content/ms.html
+++ b/src/content/ms.html
@@ -1,7 +1,7 @@
 ---
 title: Multiple Sclerosis
 permalink: /ms/
-description: Multiple Sclerosis CAE
+description: Multiple Sclerosis CEA
 ---
 {% extends "base.html" %}
 {% block head %}
@@ -82,20 +82,18 @@ description: Multiple Sclerosis CAE
   .references li {
     list-style: none;
   }
-
-
 </style>
 {% endblock %}
 
 
 {% block body %}
-<div class="[ stack g0 jfybetween itemscenter ] [ px3 ]">
-  <header class="squeeze12 stack g0 itemscenter textcenter">
+<div class="[ stack g0 ] [ jb ic px3 ]">
+  <header class="[ squeeze12 stack ] [ ic tc g0 ]">
     <div>
       <h1>MULTIPLE SCLEROSIS</h1>
       <p class="fs2">A Focus on Cognition</p>
     </div>
-    <nav class="[ tab-nav ] [ cluster gy-2 jfycenter ]">
+    <nav class="[ tab-nav ] [ cluster gy-2 jc ]">
       <button name="1" class="tab-btn">Background</button>
       <button name="2" class="tab-btn">Symptoms</button>
       <button name="3" class="tab-btn">Assessment</button>
@@ -106,7 +104,7 @@ description: Multiple Sclerosis CAE
 
   <main class="squeeze10">
     <div id="0" class="[ tab ] [ flow2 ]">
-      <p class="textcenter fs1"><strong>Press on any of the above tabs!</strong></p>
+      <p class="[ tc fs1 ]"><strong>Press on any of the above tabs!</strong></p>
     </div>
     <article id="1" class="[ tab ] [ flow2 ]">
       <h2>Background</h2>
@@ -257,7 +255,7 @@ description: Multiple Sclerosis CAE
         <li><strong><a href="https://sudoku.com/">Sudokus</a></strong>
           <p>For calculus, memory, attention and ability to solve complex problems)</p>
         </li>
-        <li><strong><a href="https://www.boatloadpuzzles.com/playcrossword">Crosswords</a></strong> 
+        <li><strong><a href="https://www.boatloadpuzzles.com/playcrossword">Crosswords</a></strong>
           <p>For language, memory, attention</p>
         </li>
         <li><strong><a href="https://www.chess.com/">Chess</a></strong>
@@ -268,7 +266,7 @@ description: Multiple Sclerosis CAE
       </ul>
 
       <h3>Taking care of the cognitive abilities with physical exercise</h3>
-      <p>Aerobic exercises are a very useful tool in maintaining the brain in shape.. It can take the form of exercise such as cycling, running a low intensity, hiking.</p>  
+      <p>Aerobic exercises are a very useful tool in maintaining the brain in shape.. It can take the form of exercise such as cycling, running a low intensity, hiking.</p>
       <p>Mild or moderate multiple sclerosis should engage in at least 30 min of moderate-intensity aerobic activity two times per week and strength training for major muscle groups (quadriceps, trunk...) twice per week.:</p>
       <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/exercise.jpg" alt=""></div>
       <figure class="flow1/2">
@@ -290,20 +288,20 @@ description: Multiple Sclerosis CAE
 
       <h3>What were the 1st changes you noticed before being diagnosed?</h3>
       <p>
-        Well first I started to lose vision on my left eye, then sensitivity in my right arm and finally the motor control in my left leg. 
+        Well first I started to lose vision on my left eye, then sensitivity in my right arm and finally the motor control in my left leg.
         I noticed the loss of sensitivity when I had to apply cold or heat therapy to my patient. I noticed the burn on my skin, but I hadn't had any pain.
       </p>
 
-      <h3>And nowadays what are your symptoms?</h3> 
+      <h3>And nowadays what are your symptoms?</h3>
       <p>The vision in my left eye declined, I have now motor problem in the whole right side and lost a lot of muscle strength (only 40% left according to the neurologist).</p>
       <p>
-        My whole left side lack of sensitivity especially at night, when I'm sleeping, I don't feel any pressure in my left arm. Also, I have recurrent paraesthesia and paralysis in the lower limb in that side. 
+        My whole left side lack of sensitivity especially at night, when I'm sleeping, I don't feel any pressure in my left arm. Also, I have recurrent paraesthesia and paralysis in the lower limb in that side.
         I also have difficult crises when I must go to the toilet, it can take some time and efforts during those moments.
       </p>
       <p>
         Also, it the main symptoms occurs at night and after physical activities like playing playing football. However, I've been able to prepare and marathon to prove that it was possible despite the disease.
       </p>
-      <h3>Did the multiple sclerosis affect your family?</h3> 
+      <h3>Did the multiple sclerosis affect your family?</h3>
       <p>Yes, sometimes I feel like it affects more my wife than it does for me. For example, I don’t want her to come with me at my medical appointments, it's hard for her to take. I rather go alone.</p>
 
       <h3>Do you have any help from the government?</h3>
@@ -314,7 +312,7 @@ description: Multiple Sclerosis CAE
 
       <h3>In which aspect does the psychologist help you manage the MS?</h3>
       <p>
-        He told me to take notes of everything I did before the crisis. I then started writing down what I ate prior to the relapse, which activity I did, my feelings at that time...And I noticed that my relapses were linked to a common factor every time. A strong negative emotion eventually leads to a crisis because I had troubles controlling it.  
+        He told me to take notes of everything I did before the crisis. I then started writing down what I ate prior to the relapse, which activity I did, my feelings at that time...And I noticed that my relapses were linked to a common factor every time. A strong negative emotion eventually leads to a crisis because I had troubles controlling it.
         I recommend everyone with MS to apply this technique.
       </p>
 
@@ -327,7 +325,7 @@ description: Multiple Sclerosis CAE
   </main>
 
   <footer>
-    <div class="[ squeeze12 centerx cluster g4 jfybetween ]">
+    <div class="[ squeeze12 cluster g4 cx jb ]">
       <div class="flow2">
         <h2 class="fs1">#heretohelp</h2>
         <div class="flow1/3">
@@ -342,7 +340,7 @@ description: Multiple Sclerosis CAE
         <p class="fs-1"><em>Made by Alex, Frederik, Pierre, and Servane at University San Pablo, CEU</em></p>
         <div><a href="/assets/special/ms/poster.png"><img class="[ img poster ] [ squeeze8 ]" src="/assets/special/ms/poster.png" alt=""></a></div>
       </div>
-      
+
       <div class="flow1">
         <h2 class="fs1">References</h2>
         <ul class="[ references ] [ flow1 ]">
