--- a/src/content/es/club.html
+++ b/src/content/es/club.html
@@ -9,7 +9,7 @@ description:
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="[ squeeze12 stack ] [ g3 centerx ]">
+  <div class="[ squeeze12 stack ] [ g3 cx ]">
     <div class="[ flow1 ]">
       <h1>Club de Investigación</h1>
       <p class="[ fs2 ]"><em>USP CEU Facultad de Medicina</em></p>
