Fix csaw expansion

--- a/src/content/csaw.html
+++ b/src/content/csaw.html
@@ -53,7 +53,7 @@ description: Class activity (INV)
   <div class="[ bd-1 bd-p300 ]"></div>
 
   <section class="[ stack ] [ tc g0 fc-p100 ]">
-    <div class="[ squeeze9 ] [ cx e p0 bg-n900 ]">
+    <div class="[ squeeze9 ] [ cx px2 py0 bg-n900 ]">
       <p class="[ fs4 fw700 ]">313 subjects</p>
     </div>
     <div class="[ cluster ] [ ic jc g0 fc-p300 fs0 ]">
