--- a/src/content/csaw.html
+++ b/src/content/csaw.html
@@ -130,11 +130,11 @@ description: Class activity (INV)
     <div class="">
       <div class="[ flow1 ] [ px0 py2 bg-n700 fc-n200 ]">
         <h3>One interpretation</h3>
-        <p>Both decompression as well as arthroscopy are effective and could be considered as treatment strategies.</p>
+        <p>Both decompression as well as arthroscopy are effective and could be considered as treatment strategies for subacromial pain.</p>
       </div>
       <div class="[ flow1 ] [ px0 py2 bg-n900 fc-p100 ]">
         <h3>More likely</h3>
-        <p>Surgery, although <em>statistically</em> better than no treatment, doesn't provide patients with a <em>clinically</em> meaningful benefit.</p>
+        <p>Surgery, although <em>statistically</em> better than no treatment, doesn't provide subacromial pain patients with a <em>clinically</em> meaningful benefit.</p>
       </div>
     </div>
   </section>
