--- a/src/content/csaw.html
+++ b/src/content/csaw.html
@@ -28,7 +28,7 @@ description: Class activity (INV)
     </div>
   </section>
 
-  <div class="[ bd-1 bd-p300 ]"></div>
+  <div class="[ bdt0 bd-p500 ]"></div>
 
   <section class="[ switcher10 ] [ g2 ]">
     <h2 class="[ h ]">Inclusion and exclusion criteria</h2>
@@ -50,7 +50,7 @@ description: Class activity (INV)
     </div>
   </section>
 
-  <div class="[ bd-1 bd-p300 ]"></div>
+  <div class="[ bdt0 bd-p500 ]"></div>
 
   <section class="[ stack ] [ tc g0 fc-p100 ]">
     <div class="[ squeeze9 ] [ cx px2 py0 bg-n900 ]">
@@ -117,7 +117,7 @@ description: Class activity (INV)
     </div>
   </section>
 
-  <div class="[ bd-1 bd-p300 ]"></div>
+  <div class="[ bdt0 bd-p500 ]"></div>
 
   <section class="[ flow2 squeezebody ] [ cx ]">
     <h2 class="[ tc fs4 ]">Decompression is no better than sham.</h2>
@@ -139,7 +139,7 @@ description: Class activity (INV)
     </div>
   </section>
 
-  <div class="[ bd-1 bd-p300 ]"></div>
+  <div class="[ bdt0 bd-p500 ]"></div>
 
   <section class="[ flow2 ] [ fs-1 ]">
     <h2>References</h2>
