--- a/src/content/csaw.html
+++ b/src/content/csaw.html
@@ -21,14 +21,14 @@ description: Class activity (INV)
     </div>
     <div class="[ cluster ] [ jb g2 fs-1 ]">
       <div class="[ image ] [ frame1:1 squeeze7 ]"><img src="/assets/img/csaw-pain.jpg" alt=""></div>
-      <div class="[ flow2 ] [ pl0 bdl-1 bd-p300 ]">
+      <div class="[ flow2 ] [ pl0 bdl-1 bd-p500 ]">
         <p>If you or someone you know is suffering from shoulder pain, making an informed decision about which treatment options to pursue can be difficult. Surgery is a frequently recommended option to treat the condition still commonly known as <em>subacromial impingement</em>.</p>
         <p>This landmark clinical trial evaluated the effectiveness of subacromial decompression surgery, a commonly performed procedure, comparing it to a placebo (fake) surgery as well as no treatment. The findings pose a real challenge to the traditional understanding and management of subacromial shoulder pain.</p>
       </div>
     </div>
   </section>
 
-  <div class="[ bdt0 bd-p500 ]"></div>
+  <div class="[ bdt0 bd-p200 ]"></div>
 
   <section class="[ switcher10 ] [ g2 ]">
     <h2 class="[ h ]">Inclusion and exclusion criteria</h2>
@@ -50,7 +50,7 @@ description: Class activity (INV)
     </div>
   </section>
 
-  <div class="[ bdt0 bd-p500 ]"></div>
+  <div class="[ bdt0 bd-p200 ]"></div>
 
   <section class="[ stack ] [ tc g0 fc-p100 ]">
     <div class="[ squeeze9 ] [ cx px2 py0 bg-n900 ]">
@@ -69,12 +69,12 @@ description: Class activity (INV)
           <h3 class="[ fs1 ]">Decompression</h3>
           <p>Real surgery</p>
         </div>
-        <div class="[ switcher7 ]">
-          <div class="[ py-2 bg-n900 fc-n100 ]">
-            <p><strong class="[ fs1 ]">53</strong><br>Age</p>
+        <div class="[ switcher6 ]">
+          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+            <p><strong class="[ fs0 ]">53</strong><br>Age</p>
           </div>
-          <div class="[ py-2 bg-n900 fc-n100 ]">
-            <p><strong class="[ fs1 ]">51%</strong><br>Female</p>
+          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+            <p><strong class="[ fs0 ]">51%</strong><br>Female</p>
           </div>
         </div>
       </div>
@@ -83,12 +83,12 @@ description: Class activity (INV)
           <h3 class="[ fs1 ]">Arthroscopy</h3>
           <p>Placebo surgery</p>
         </div>
-        <div class="[ switcher7 ]">
-          <div class="[ py-2 bg-n900 fc-n100 ]">
-            <p><strong class="[ fs1 ]">54</strong><br>Age</p>
+        <div class="[ switcher6 ]">
+          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+            <p><strong class="[ fs0 ]">54</strong><br>Age</p>
           </div>
-          <div class="[ py-2 bg-n900 fc-n100 ]">
-            <p><strong class="[ fs1 ]">50%</strong><br>Female</p>
+          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+            <p><strong class="[ fs0 ]">50%</strong><br>Female</p>
           </div>
         </div>
       </div>
@@ -97,12 +97,12 @@ description: Class activity (INV)
           <h3 class="[ fs1 ]">No treatment</h3>
           <p>Control group</p>
         </div>
-        <div class="[ switcher7 ]">
-          <div class="[ py-2 bg-n900 fc-n100 ]">
-            <p><strong class="[ fs1 ]">53</strong><br>Age</p>
+        <div class="[ switcher6 ]">
+          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+            <p><strong class="[ fs0 ]">53</strong><br>Age</p>
           </div>
-          <div class="[ py-2 bg-n900 fc-n100 ]">
-            <p><strong class="[ fs1 ]">50%</strong><br>Female</p>
+          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+            <p><strong class="[ fs0 ]">50%</strong><br>Female</p>
           </div>
         </div>
       </div>
@@ -117,13 +117,15 @@ description: Class activity (INV)
     </div>
   </section>
 
-  <div class="[ bdt0 bd-p500 ]"></div>
+  <div class="[ bdt0 bd-p200 ]"></div>
 
   <section class="[ flow2 squeezebody ] [ cx ]">
     <h2 class="[ tc fs4 ]">Decompression is no better than sham.</h2>
     <div class="[ image ]"><img src="/assets/img/csaw-results.png" alt=""></div>
     <p>Both surgical groups improved their shoulder function (OSS) compared to those who underwent no treatment, but decompression did <strong>not</strong> outperform arthroscopy.</p>
   </section>
+
+  <div class="[ bdt0 bd-p200 ]"></div>
 
   <section class="[ stack ] [ g2 ]">
     <h2 class="[ h ]">Implications</h2>
@@ -139,7 +141,7 @@ description: Class activity (INV)
     </div>
   </section>
 
-  <div class="[ bdt0 bd-p500 ]"></div>
+  <div class="[ bdt0 bd-p200 ]"></div>
 
   <section class="[ flow2 ] [ fs-1 ]">
     <h2>References</h2>
@@ -149,6 +151,5 @@ description: Class activity (INV)
   <section class="[ fs-2 ]">
     Made by Frederik Kehlet
   </section>
-
 </div>
 {% endblock %}
