Add CSAW to homepage

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -57,10 +57,14 @@ description: The pain revolution is here. Whether you're a health professional, 
     </div>
     <div class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Other Projects</h2>
-      <section class="[ flow1/3 ]">
+      <div class="[ flow1/3 ]">
         <h3>Journal Club</h3>
         <p><a href="/en/club/">Click here</a> to view information about the USP CEU Faculty of Medicine journal club.</p>
-      </section>
+      </div>
+      <div class="[ flow1/3 ]">
+        <h3>CSAW</h3>
+        <p><a href="/csaw/">Click here</a> to view a webpage summary of the landmark CSAW trial for subacromial shoulder pain.</p>
+      </div>
     </div>
   </div>
 </main>
