--- a/src/content/csaw.html
+++ b/src/content/csaw.html
@@ -145,11 +145,11 @@ description: Class activity (INV)
 
   <section class="[ flow2 ] [ fs-1 ]">
     <h2>References</h2>
-    <p><a href="https://doi.org/10.1016/S0140-6736(17)32457-1">Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</a></p>
+    <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
+    <p><a href="/en/">Back to home</a></p>
   </section>
 
   <section class="[ fs-2 ]">
-    Made by Frederik Kehlet
   </section>
 </div>
 {% endblock %}
