CSAW and choosing a clinician

--- a/src/content/csaw.html
+++ b/src/content/csaw.html
@@ -121,35 +121,46 @@ description: Class activity (INV)
 
   <section class="[ flow2 squeezebody ] [ cx ]">
     <h2 class="[ tc fs4 ]">Decompression is no better than sham.</h2>
-    <div class="[ image ]"><img src="/assets/img/csaw-results.png" alt=""></div>
-    <p>Both surgical groups improved their shoulder function (OSS) compared to those who underwent no treatment, but decompression did <strong>not</strong> outperform arthroscopy.</p>
+    <div class="[ image ]"><img src="/assets/img/csaw-results-custom.png" alt=""></div>
+    <p>Both surgical groups improved their Oxford Shoulder Score* compared to those who underwent no treatment, but decompression did <strong>not</strong> outperform arthroscopy.</p>
+    <p class="[ fs-2 ]"><i>* The Oxford Shoulder Score is a 48-point questionnaire that measures shoulder function.</i></p>
   </section>
 
   <div class="[ bdt0 bd-p200 ]"></div>
 
-  <section class="[ stack ] [ g2 ]">
-    <h2 class="[ h ]">Implications</h2>
-    <div class="">
-      <div class="[ flow1 ] [ px0 py2 bg-n700 fc-n200 ]">
+  <section class="[ sidebar ] [ ic rr gx4 gy2 ]">
+    <div class="[ main50% stack ]">
+      <h2 class="[ h ]">Implications</h2>
+      <div class="[ flow1 ] [ p2 bg-n700 fc-n200 ]">
         <h3>One interpretation</h3>
         <p>Both decompression as well as arthroscopy are effective and could be considered as treatment strategies for subacromial pain.</p>
       </div>
-      <div class="[ flow1 ] [ px0 py2 bg-n900 fc-p100 ]">
+      <div class="[ flow1 ] [ p2 bg-n900 fc-p100 ]">
         <h3>More likely</h3>
         <p>Surgery, although <em>statistically</em> better than no treatment, doesn't provide subacromial pain patients with a <em>clinically</em> meaningful benefit.</p>
       </div>
+    </div>
+    <div class="[ flow2 side7 ] [ pl0 bdl-1 bd-p500 fs-1 ]">
+    <p><strong>Shoulder pain patients:</strong><br>Bring this study up with your trusted health professional. Ask them about the risks, benefits, and evidence behind your different treatment options. Collaborate to make an informed decision that's right for you.</p>
+    <p><strong>Medical professionals:</strong><br>Invasive therapies can be powerful, but by the same token the validity of many established procedures should not be taken for granted. Talk with your patients about the evidence regarding surgery for their condition. Collaborate to make an informed decision that's right for them.</p>
     </div>
   </section>
 
   <div class="[ bdt0 bd-p200 ]"></div>
 
-  <section class="[ flow2 ] [ fs-1 ]">
-    <h2>References</h2>
-    <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
-    <p><a href="/en/">Back to home</a></p>
-  </section>
+  <div class="[ sidebar ] [ ie g2 ]">
+    <div class="[ flow2 main50% ] [ fs-1 ]">
+      <h2>References</h2>
+      <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
+      <p><a href="/en/">Back to home</a></p>
+    </div>
+    <div class="[ side4 stack ] [ g-1 fs-2 ]">
+      <div class="[ image ]"><img src="/assets/img/ceu-logo.jpg" alt=""></div>
+      <p><i>Made by Frederik Kehlet</i></p>
+    </div>
+  </div>
 
-  <section class="[ fs-2 ]">
-  </section>
+
+
 </div>
 {% endblock %}
