--- a/src/content/404.html
+++ b/src/content/404.html
@@ -4,14 +4,14 @@ permalink: /404/
 ---
 {% extends 'base.html' %}
 {% block body %}
-<main class="cover stack jfycenter flow1">
-  <div class="cluster gx4 itemscenter">
-    <p class="fs3 fw700">:(</p>
-    <div class="flow1/2">
+<main class="[ cover flow1 stack ] [ jc ]">
+  <div class="[ cluster ] [ cx ic gx4 gy0 ]">
+    <p class="[ fs3 fw700 ]">:(</p>
+    <div class="[ flow1/2 ]">
       <h1>404</h1>
-      <div>
-        <p class="fs2">We couldn't find what you're looking for.</p>
-        <p class="fs2">No hemos podido encontrar lo que estás buscando.</p>
+      <div class="[ fs2 ]">
+        <p>We couldn't find what you're looking for.</p>
+        <p>No hemos podido encontrar lo que estás buscando.</p>
       </div>
       <p><a href="/">Back to start / volver al inicio</a></p>
     </div>
