--- a/src/content/csaw.html
+++ b/src/content/csaw.html
@@ -142,21 +142,23 @@ description: Class activity (INV)
     </div>
     <div class="[ flow2 side7 ] [ pl0 bdl-1 bd-p500 fs-1 ]">
     <p><strong>Shoulder pain patients:</strong><br>Bring this study up with your trusted health professional. Ask them about the risks, benefits, and evidence behind your different treatment options. Collaborate to make an informed decision that's right for you.</p>
-    <p><strong>Medical professionals:</strong><br>Invasive therapies can be powerful, but by the same token the validity of many established procedures should not be taken for granted. Talk with your patients about the evidence regarding surgery for their condition. Collaborate to make an informed decision that's right for them.</p>
+    <p><strong>Health professionals:</strong><br>Invasive therapies can be powerful, but the validity of established procedures should not be taken for granted. Talk with your patients about the evidence regarding surgery for their condition. Collaborate to make an informed decision that's right for them.</p>
     </div>
   </section>
 
   <div class="[ bdt0 bd-p200 ]"></div>
 
-  <div class="[ sidebar ] [ ie g2 ]">
-    <div class="[ flow2 main50% ] [ fs-1 ]">
+  <div class="[ cluster ] [ jb gx4 gy2 ]">
+    <div class="[ flow2 ] [ fs-1 ]">
       <h2>References</h2>
       <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
-      <p><a href="/en/">Back to home</a></p>
     </div>
-    <div class="[ side4 stack ] [ g-1 fs-2 ]">
+    <div class="[ squeeze6 stack ] [ g-1 fs-2 ]">
       <div class="[ image ]"><img src="/assets/img/ceu-logo.jpg" alt=""></div>
-      <p><i>Made by Frederik Kehlet</i></p>
+      <div class="[ flow1/3 ]">
+        <p><i>Made by Frederik Kehlet for Research in the Health Sciences, a 6th semester physiotherapy class</i></p>
+      </div>
+      <p><a href="/en/">Go back home</a></p>
     </div>
   </div>
 
